--- a/MPP/proposal.tex
+++ b/MPP/proposal.tex
@@ -16,7 +16,9 @@
 \input{introduction.tex}
 \input{background.tex}
 \input{existing_work.tex}
-\pagebreak{}
+\input{methodology.tex}
+\input{evaluation.tex}
+\input{workplan.tex}
 
 \acrodef{CUDA}{\emph{Compute Unified Device Architecture}}
 \acrodef{OpenCL}{\emph{Open Computing Language}}
@@ -42,6 +44,23 @@
     Jianbin Fang, Ana Lucia Varbanescu and Henk Sips
 
     2011 International Conference on Parallel Processing
+
+  \bibitem{branching}
+    Architecture-Aware Mapping and Optimization on Heterogeneous Computing Systems
+
+    Mayank Daga
+
+  \bibitem{parallelfunction}
+    Parallel programming using functional languages
+
+    Roe, Paul (1991
+
+  \bibitem{bestpractice}
+    NVIDIA OpenCL Best Practices Guide Version 1.0
+
+  \bibitem{ghc}
+    Glasgow Haskell Compiler Standard Library
+    http://www.haskell.org/ghc/docs/latest/html/libraries/index.html
 
   \bibitem{mapreduce}
     MapReduce: Simplified Data Processing on Large Clusters
