--- a/MPP/titlepage.tex
+++ b/MPP/titlepage.tex
@@ -1,5 +1,5 @@
 \begin{titlepage}
-  \title{{\small MInf Project Proposal}\\Practical Framework for Accelerating MapReduce and Functional Programming Primitives via Efficient Utilisation of a System GPU.}   % type title between braces
+  \title{{\small MInf Project Proposal}\\Practical Framework for Accelerating MapReduce and Higher-Order Functions via Efficient Utilisation of a System GPU.}   % type title between braces
 \author{Aaron Cronin\\University of Edinburgh\\ s0925570@sms.ed.ac.uk}         % type author(s) between braces
 
 \date{\today}    % type date between braces
