Fixed background text

--- a/MPP/background.tex
+++ b/MPP/background.tex
@@ -1,5 +1,5 @@
 \section{Background}
-This section provides background information concerning the components and concepts requiring study in order to undertake this project, as well as examples and brief evaluation of existing related work.
+This section provides background information concerning the components and concepts requiring study in order to undertake this project.
 \subsection{OpenCL}
 OpenCL is an open framework for executing tasks described by a C99 kernel on heterogeneous devices such as multi-core CPUs and GPUs. Kernels are compiled for detected on-board platforms and abstracted from underlying hardware-specific operations in order to stay platform-independent across compute devices. Data-processing is distributed across the many cores of a device via the arrangement of kernel instances or \emph{work-items} into \emph{workgroups}.
 
