--- a/MPP/abstract.tex
+++ b/MPP/abstract.tex
@@ -1,15 +1,17 @@
 \begin{abstract}       % subsection 1.1.
-  This document outlines my proposal for a project researching the implementation of large-scale data-processing paradigms on multi-core systems.
+  This proposal outlines a project researching the implementation of large-scale data-processing paradigms on multi-core systems.
   The aim is to provide easily-exploited access to the vast number of programmable cores present in modern systems containing \ac{GPUs} and investigate how their usage can be optimised.
 
-  The project should provide a framework that will be of use to researchers and students who have access to a high-performance GPU devices and would benefit from an increase in throughput when processing datasets in a manner that can be suitably parallelised.
-  In addition, the project hopes to avoid the disadvantages of similar parallel frameworks that require large amounts of user-intervention to tune execution, and therefore increase the barriers of entry to otherwise obtainable benefits.
+  The project should provide a framework that will be of use to anyone who has access to a high-performance GPU device and would benefit from an increase in throughput when processing datasets in a manner that can be suitably parallelised.
+  In addition, the project hopes to avoid the disadvantages of similar parallel frameworks that require large amounts of user-intervention to tune execution. This need for task-specific configuration increase the barriers to entry of otherwise obtainable benefits.
 
 These goals concentrate on maximising the performance and usability of a framework that results from evaluation and iteration of optimisations alongside research into existing failings.
 
-The resulting implementation shall aim to verify the hypothesis that there exists use-cases, such as machine-learning algorithms requiring large datasets, that can be efficiently implemented on a highly parallel device whilst remaining programmer-friendly by presenting a collection of simple functions that encapsulate all required complexities.
+The resulting implementation shall aim to verify the hypothesis that there exists use-cases that can be efficiently implemented on a highly parallel device whilst remaining programmer-friendly.
+This abstraction may be achieved by presenting a collection of simple functions that encapsulate all required complexities.
 
-Researching relevant advances, producing the framework, and evaluating it against similar project outcomes should require a lengthy period of management and iteration, I hope to demonstrate that there is sufficient depth in my plans to take advantage of such a long period of focussed activity.
+Researching relevant advances, producing the framework, and evaluating it against similar project outcomes should require a lengthy period of management and iteration.
+This document should demonstrate that there is sufficient depth in research plans, suitable for a long period of focussed activity.
 \end{abstract}
 
 
