The other half proof read and improved

--- a/MPP/evaluation.tex
+++ b/MPP/evaluation.tex
@@ -1,17 +1,17 @@
 \section{Evaluation}
 \subsection{Performance}
-In order to understand how my implementation performs against alternatives, both as I iteratively improve it and when I intend to release it, I shall be providing results of various performance tests.
+In order to understand how the implementation performs against alternatives, both as it is being iteratively improved and prior to release. Results of various performance tests shall be provided.
 
-For each feature present, my framework will be compared against existing projects or language constructs that provide such functionality. When demonstrating a functional Map implementation, I may detail the time taken for a language's default Map implementation alongside the results of my library performing on both the GPU and CPU as compute devices.
+For each feature present, the framework will be compared against existing projects or language constructs that provide such functionality. When demonstrating a functional Map implementation, the time taken for a language's default Map implementation, alongside the results of my library performing on both the GPU and CPU as compute devices, shall be shown.
 
-I hope to enhance such comparisons by providing granulated details of the time taken for various stages of execution, in order to highlight which aspects scale well to GPU environments and which do not.
+Such comparisons shall be enhanced by providing granulated details of the time taken for various stages of execution, in order to highlight which aspects scale well to GPU environments and which do not.
 
-In addition to 'artificial' benchmarks that show how individual actions perform, I hope to produce several equivalent code samples using competing methodologies and perhaps show that the entire process of performing some task, such as machine-learning, can be performed quicker when including my framework into an existing high-level implementation without sacrificing clarity.
+In addition to 'artificial' benchmarks that show how individual actions perform, several equivalent code samples shall be produced using competing methodologies. Evaluating these shall show if performing some task, such as machine-learning, can be accelerated when including the project's framework into an existing high-level implementation - without sacrificing clarity.
 \subsection{Usability}
-Since I do not wish to significantly reduce the usability of my outcome simply to provide the highest performance possible, I shall be conducting several user-evaluation trials in order to influence my design decisions.
+Since the project aims for usability of the outcome and not simply the highest performance possible, several user-evaluation trials shall be conducted in order to influence design decisions.
 
-I will observe real-world users applying functions that I will develop to requirements of personal projects or experimental scenarios. I will record which aspects of the provided framework they find issues with and investigate whether anything can be improved in these cases.
+Real-world users shall be observed applying the framework's functions to personal projects or experimental scenarios. Aspects of the provided framework that they find issues with shall be recorded. It will be investigated whether anything can be improved in these cases.
 
-I will also attempt to package my resultant framework in a way that makes it simple to obtain and include into projects by interested parties.
+The produced framework shall be packaged in a way that makes it simple to obtain and include into projects by interested parties.
 \subsection{Portability}
-In addition to ensuring that the project is simple to obtain and utilise, I will be testing it on as many compatible build environments and hardware architectures as possible to demonstrate its suitability as a general solution.
+In addition to ensuring that the project is simple to obtain and utilise, it shall be tested on many compatible build environments and hardware architectures as possible. This shall demonstrate its suitability as a general solution.
