--- a/MPP/workplan.tex
+++ b/MPP/workplan.tex
@@ -1,6 +1,6 @@
 \section{Output and Work Plan}
 \subsection{Immediate Focus - Spring 2013}
-The first stage of implementation is to produce an underlying library for functional programming tasks, the higher-order functions detailed earlier.
+The first stage of implementation is to produce an underlying library for higher-order functiontional programming tasks.
 By making it simpler to enqueue OpenCL kernels and get datasets to/from the device, this will enable easy evaluation of necessary scheduling techniques.
 
 Once the library has implemented higher-order functions for basic data types, an initial comparison of its advantages against existing methods shall be produced.
