Perhaps final RC

--- a/MPP/existing_work.tex
+++ b/MPP/existing_work.tex
@@ -17,8 +17,8 @@ The original \emph{Phoenix} \cite{phoenix} project provided a shared-memory impl
 \emph{Phoenix++} \cite{phoenix++}, a C++ re-implementation of the original Phoenix platform, aimed to rectify some disadvantages by presenting an easier-to-extend framework that allowed critical components to be tuned for greater efficiency. It resulted in a several-times performance increase over the original system via adaption to different usage patterns and a far more aggressive combiner that is triggered after every Map emmision.
 
 \paragraph{Analysis}
-This project's framework should mitigate the need for substantial configuration by the end-user, yet without sacrificing too much performance. The project may follow in the footsteps of \emph{MARS} by showing it is possible to provide greater performance than CPU implementations like Phoenix, despite the expected optimisation difficulties caused by the usage of OpenCL instead of CUDA.
-The Phoenix++ paper suggests that it is important to make it possible to swap out key functions in the MapReduce pipeline in order to evaluate how some algorithms perform against others.
+This project's framework should mitigate the need for substantial configuration by the end-user, yet without sacrificing too much performance. The project may follow in the footsteps of \emph{MARS} by showing it is possible to provide greater performance than CPU platforms like Phoenix, despite the expected optimisation difficulties caused by the usage of OpenCL instead of CUDA.
+The Phoenix++ paper suggests that it is important to facilitate swapping implementations of key functions in the MapReduce pipeline. This will allow greater evaluation of how some algorithms perform against others.
 
 \subsection{StreamMR}
 \emph{StreamMR} \cite{streammr} is an OpenCL MapReduce platform that takes advantage of the AMD Stream SDK to optimise performance on AMD \ac{GPUs}. This repeats the earlier theme of restricting hardware compatibility in order to make vendor-specific optimisations possible. It also promises improved performance, compared to MARS, when handling intermediate results by using hash-tables instead of sorting by keys. StreamMR, like Phoenix++, allows advanced Combiner functions - in this case to help reduce the overhead of moving datasets to and from the GPU device over a relatively costly PCI-e link.
