--- a/MPR1/report.tex
+++ b/MPR1/report.tex
@@ -20,8 +20,7 @@
 %\input{background.tex}
 %\input{existing_work.tex}
 \input{progress.tex}
-\input{methodology.tex}
-\input{evaluation.tex}
+\input{future.tex}
 \input{workplan.tex}
 
 \acrodef{CUDA}{\emph{Compute Unified Device Architecture}}
@@ -31,6 +30,8 @@
 \acrodef{GPUs}{\emph{Graphics Processing Units}}
 \acrodef{IPS}{\emph{instructions per second}}
 \acrodef{SIMD}{\emph{Single-Instruction-Multiple-Data}}
+
+\pagebreak
 
 \begin{thebibliography}{9}
 
@@ -42,6 +43,13 @@
     Practical Framework for Accelerating MapReduce and Higher-Order Functions via Efficient Utilisation of a System GPU.
 
     Aaron Cronin
+
+  \bibitem{gpusum}
+    NVIDIA GPU Gems
+    Chapter 39. Parallel Prefix Sum (Scan) with CUDA
+
+    http://http.developer.nvidia.com/GPUGems3/gpugems\textunderscore3ch39.html
+
   \bibitem{khronos}
     The Khronos Group OpenCL Standard
 
