--- a/MPR1/report.tex
+++ b/MPR1/report.tex
@@ -22,6 +22,7 @@
 \input{progress.tex}
 \input{future.tex}
 \input{workplan.tex}
+\input{figures.tex}
 
 \acrodef{CUDA}{\emph{Compute Unified Device Architecture}}
 \acrodef{OpenCL}{\emph{Open Computing Language}}
